--- a/lms-borrower/pom.xml
+++ b/lms-borrower/pom.xml
@@ -48,6 +48,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		    <version>2.10.1</version>
+		</dependency>
+		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		    <scope>test</scope>
