--- a/lms-borrower/pom.xml
+++ b/lms-borrower/pom.xml
@@ -55,8 +55,7 @@
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
-		    <scope>test</scope>
-		    <version>1.4.194</version>
+		    <scope>runtime</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
