--- a/lms-borrower/pom.xml
+++ b/lms-borrower/pom.xml
@@ -22,14 +22,32 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<exclusions>
+    			<exclusion>
+      				<groupId>org.springframework.boot</groupId>
+      				<artifactId>spring-boot-starter-logging</artifactId>
+    			</exclusion>
+  			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+    			<exclusion>
+      				<groupId>org.springframework.boot</groupId>
+      				<artifactId>spring-boot-starter-logging</artifactId>
+    			</exclusion>
+  			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<exclusions>
+    			<exclusion>
+      				<groupId>org.springframework.boot</groupId>
+      				<artifactId>spring-boot-starter-logging</artifactId>
+    			</exclusion>
+  			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -45,14 +63,6 @@
                 	<groupId>org.springframework.boot</groupId>
                 	<artifactId>spring-boot-starter-logging</artifactId>
             	</exclusion>
-            	<exclusion>
-            		<artifactId>logback-classic</artifactId>
-            	<groupId>ch.qos.logback</groupId>
-        		</exclusion>
-        		<exclusion>
-            		<artifactId>log4j-over-slf4j</artifactId>
-            		<groupId>org.slf4j</groupId>
-        		</exclusion>
 				<exclusion>
 					<groupId>org.junit.vintage</groupId>
 					<artifactId>junit-vintage-engine</artifactId>
@@ -63,10 +73,7 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-log4j2</artifactId>
     	</dependency>
-    	<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    </dependency>
+
 		<dependency>
 		    <groupId>com.fasterxml.jackson.dataformat</groupId>
 		    <artifactId>jackson-dataformat-xml</artifactId>
