--- a/lms-borrower/pom.xml
+++ b/lms-borrower/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.smoothstack.avalanche</groupId>
-	<artifactId>lms-borr</artifactId>
+	<groupId>com.smoothstack.avalanche.lms.borrowermsv</groupId>
+	<artifactId>borrowermsv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>lms-borr</name>
-	<description>Demo project for Spring Boot</description>
+	<name>lms-borrower</name>
+	<description>Borrower microservice for LMS</description>
 
 	<properties>
 		<java.version>1.8</java.version>
