--- a/lms-borrower/src/main/resources/application.properties
+++ b/lms-borrower/src/main/resources/application.properties
@@ -6,27 +6,27 @@ spring.application.name=borrower-service
 spring.cloud.loadbalancer.ribbon.enabled = false
 
 # Spring Datasource (H2)
-spring.datasource.url = jdbc:h2:mem:library
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url = jdbc:h2:mem:library
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # H2 Console Settings
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
 
 
 ## Hibernate Properties
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.open-in-view = false
 spring.jpa.hibernate.ddl-auto = update
 
 ## ALTERNATE DATA SOURCE CONFIGS
 ## Spring Datasource ( mariaDB / MySQL )
-#spring.datasource.url = jdbc:mysql://localhost:3306/library?useSSL=false
-#spring.datasource.username = root
-#spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://lms-database.cdbkxzwlwzvj.us-east-1.rds.amazonaws.com:3306/library?useSSL=false
+spring.datasource.username = admin
+spring.datasource.password = rootroot
