--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+		<build.manifest.section>Build Details</build.manifest.section>
+		<build.unknown>UNKNOWN</build.unknown>
+		<build.number>${build.unknown}</build.number>
+		<build.revision>${build.unknown}</build.revision>
 	</properties>
 
 	<dependencies>
@@ -93,6 +98,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.name}-${project.version}-${build.number}-${build.revision}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
